# Gengar-GPT

./: pyproject.toml
src/: .env-example
src/discord_api/: discord_client.py
src/openai_api/: __init__.py  openapi_connector.py
